--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,6 +74,9 @@ swiftmailer:
 fos_user:
   db_driver: orm
   firewall_name: main
+  from_email:
+              address: "info@voyatrax.tk"
+              sender_name: "No Reply"
   user_class: Members\Bundle\ManagementBundle\Entity\User
   profile:
         form:
