--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
 /app/bootstrap.php.cache
-/var/cache
+/var/cache/
 /app/config/parameters.yml
-/var/logs
+/var/logs/
 !app/cache/.gitkeep
 !app/logs/.gitkeep
 /build/
