--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -25,7 +25,7 @@ monolog:
 
 fos_elastica:
     clients:
-        default: { host: 35.180.87.141, port: 9200 }
+        default: { host: localhost, port: 9200 }
     indexes:
         search:
             client: default
