--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -11,5 +11,5 @@ parameters:
     mailer_host: smtp.gmail.com
     mailer_user: baghinsaferdotcom@gmail.com
     mailer_password: salamoalaikom
-    locale: en
+    locale: fr
     secret: ThisTokenIsNotSoSecretChangeIt
