--- a/src/Shop/Bundle/ManagementBundle/Resources/config/services.yml
+++ b/src/Shop/Bundle/ManagementBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 parameters:
     shop_management.post.class: Shop\Bundle\ManagementBundle\Entity\Post
-    
+
 
 services:
    my_shop_controller:
@@ -25,4 +25,16 @@ services:
    shop_management.category.services:
        class: Shop\Bundle\ManagementBundle\Entity\CategoryServices
        arguments:    ["@doctrine.orm.default_entity_manager"]
-   
+
+
+
+   shop_management.aws_s3.client:
+       class: Aws\S3\S3Client
+       factory: [Aws\S3\S3Client, 'factory']
+       arguments:
+           -
+               version: latest
+               region:  %amazon_s3.region%
+               credentials:
+                   key: %amazon_s3.key%
+                   secret: %amazon_s3.secret%
