--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -43,5 +43,20 @@ fos_elastica:
                         finder: ~
     
 
-#swiftmailer:
-#    delivery_address: me@example.com
+knp_gaufrette:
+        adapters:
+            image_storage:
+                local:
+                   directory: "%kernel.root_dir%/../web/"
+                   create: true
+        filesystems:
+            image_storage_filesystem:
+                adapter:    image_storage
+                alias:      image_storage_filesystem
+
+twig:
+  globals:
+        prefix: "/"
+
+parameters:
+  filesystem.base_url: '/'
