--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -40,3 +40,22 @@ fos_elastica:
                         provider: ~
                         #listener: ~
                         finder: ~
+
+knp_gaufrette:
+        adapters:
+            image_storage:
+                aws_s3:
+                    service_id: shop_management.aws_s3.client
+                    bucket_name:  %amazon_s3.bucket_name%
+                    detect_content_type: true
+        filesystems:
+            image_storage_filesystem:
+                adapter:    image_storage
+                alias:      image_storage_filesystem
+
+twig:
+  globals:
+        prefix: 'https://s3.eu-west-3.amazonaws.com/uploadimagesbucket/'
+
+parameters:
+  filesystem.base_url: 'https://s3.eu-west-3.amazonaws.com/uploadimagesbucket/'
