--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
-        "symfony/symfony": "3.4.*",
+        "symfony/symfony": "^3.4",
         "twig/twig": "^1.0||^2.0",
 
 
@@ -31,11 +31,15 @@
         "fzaninotto/faker": "^1.5",
         "phpunit/phpunit": "@dev",
         "liip/imagine-bundle": "^1.5",
+
         "friendsofsymfony/elastica-bundle": "^5.0",
+
         "white-october/pagerfanta-bundle": "^1.0",
-        "knplabs/gaufrette":                    "dev-master",
-        "knplabs/knp-gaufrette-bundle":         "dev-master",
+        "knplabs/gaufrette":                    "~0.6",
+
+        "knplabs/knp-gaufrette-bundle":         "0.5.3",
         "aws/aws-sdk-php":    "dev-master"
+
     },
     "require-dev": {
         "liip/functional-test-bundle": "^1.2",
@@ -59,9 +63,6 @@
         ]
     },
     "config": {
-        "platform": {
-            "php": "5.6"
-        },
         "sort-packages": true
     },
     "extra": {
@@ -77,5 +78,7 @@
         "branch-alias": {
             "dev-master": "3.4-dev"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": false
 }
